src/runtime-rs/vendor/actix-macros/tests/trybuild/main-06-unknown-attr.rs
#[actix_rt::main(foo = "bar")]
async fn async_main() {}

#[actix_rt::main(bar::baz)]
async fn async_main2() {}

fn main() {}
